# waclay-wasi

./: .gitignore  Cargo.toml  README.md  build-and-run.sh  build.sh  run-examples.sh  wasip2-partial.wit
examples/clock/: clock.wit  run-example.sh  wasip2-clock-partial.wit
examples/clock/guest/: Cargo.toml
examples/clock/host/: Cargo.toml
examples/env/: env.wit  run-example.sh  wasip2-env-partial.wit
examples/env/guest/: Cargo.toml
examples/filesystem/: filesystem.wit  run-example.sh  wasip2-filesystem-partial.wit
examples/filesystem/guest/: Cargo.toml
examples/filesystem/host/: Cargo.toml
examples/random/: random.wit  run-example.sh  wasip2-random-partial.wit
examples/random/guest/: Cargo.toml
examples/stdio/: run-example.sh  stdio.wit  wasip2-stdio-partial.wit
examples/stdio/guest/: Cargo.toml
examples/stdio/host/: .gitignore  Cargo.toml  output-stderr.txt.snap  output-stdout.txt.snap
examples/stdio/host/src/: bindings.rs  main.rs
src/: bindings.rs  lib.rs
src/wasi_p2_ctx/: environment_vars.rs  mod.rs
src/wasi_p2_ctx/code/: as_any.rs  mod.rs  rng_debug.rs  wasi_p2_ctx.rs  wasi_p2_traits.rs
src/wasi_p2_ctx/interfaces/: environment_vars.rs  error.rs  exit.rs  mod.rs  monotonic_clock.rs  poll.rs  preopens.rs  random.rs  stderr.rs  stdin.rs  stdout.rs  streams.rs  terminal_input.rs  terminal_output.rs  terminal_stderr.rs  terminal_stdin.rs  terminal_stdout.rs  types.rs  wall_clock.rs
src/wasi_p2_ctx/resources/: descriptor.rs  error.rs  input_stream.rs  mod.rs  output_stream.rs  pollable.rs  terminal_input.rs  terminal_output.rs
(+13 files in other folders)
